--- a/src/main/resources/cloud/VSphereDescriptor/help-name.html
+++ b/src/main/resources/cloud/VSphereDescriptor/help-name.html
@@ -4,5 +4,5 @@
   this file as a Jelly script if you need a dynamic content (but if you do so, change
   the extension to <tt>.jelly</tt>).
   -->
-  The XenServer configuration where the templates exist and the VM is to be created.
+   A label to assign this server
 </div>
