--- a/src/main/resources/cloud/VSphereCloudStarter/help-clone.html
+++ b/src/main/resources/cloud/VSphereCloudStarter/help-clone.html
@@ -4,5 +4,5 @@
   this file as a Jelly script if you need a dynamic content (but if you do so, change
   the extension to <tt>.jelly</tt>).
   -->
-  Jenkins User credential to connect to Jenkins Master.
+  The name of the cloned VM.
 </div>
