--- a/src/main/resources/cloud/VSphereDescriptor/help-user.html
+++ b/src/main/resources/cloud/VSphereDescriptor/help-user.html
@@ -4,5 +4,5 @@
   this file as a Jelly script if you need a dynamic content (but if you do so, change
   the extension to <tt>.jelly</tt>).
   -->
-  The Xen Template to clone and start.
+   Username to connect to vSphere sdk.
 </div>
